# secure-travel-booking-platform

./: .env.example  .env.staging.example  .gitattributes  .gitignore  COMPLETE_STRUCTURE_REVIEW.md  COMPLETION_SUMMARY.md  FINAL_ARCHITECTURE.md  FRONTEND_ACCURATE_REVIEW.md  FRONTEND_BUILD_GUIDE.md  FRONTEND_COMPLETE.md  FRONTEND_DEPLOY_READY_PROMPTS.md  FRONTEND_FINAL_REVIEW.md  FRONTEND_REAL_STATUS.md  FRONTEND_RESTRUCTURE_GUIDE.md  FRONTEND_SETUP.md  FRONTEND_SUMMARY.md  INTEGRATION_GUIDE.md  Makefile  NEXT_STEPS.md  PROJECT_OVERVIEW.md  PUBLIC_PAGES_SUMMARY.md  README.md  RESTRUCTURE_SUMMARY.md  RETROFIT_READY_PROMPTS.md  STITCH_PROMPT_PACK.md  STITCH_PROMPT_TO_FRONTEND_V15_MAP.md  SYNC_ISSUES_FOUND.md  alembic.ini  pyproject.toml
backend/: .env.example  .env.production.example  .env.staging.example  .env.test.example  CONTRIBUTING.md  Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20044e5dc351_add_booking_cancellation_and_refunds.py  6d16d9a4b742_harden_refresh_and_callback_replay.py  8c1f9e6b7a21_enforce_payment_idempotency_guards.py  91edad340c75_add_tour_booking_support.py  a56ea8edb0bb_add_traveler_and_support_traveler_.py  a9b8c7d6e5f4_fix_coupon_applicable_product_type.py  b0ad6e9d7fd7_initial_schema.py  beff523ca153_add_payment_idempotecy_key.py  c2d3e4f5a6b7_add_hotel_room_daily_inventory.py  c70f90e14695_add_coupon_applicable_product_type.py  d34e4b0b35ae_add_refresh_token_session_management.py  (+3 more)
backend/app/: main.py
backend/docs/: architecture.md  backup-restore-runbook.md  dfd.md  erd.md  frontend-ver-1-5-backend-implementation-backlog.md  frontend-ver-1-5-backend-upgrade-plan.md  milestone-checklist.md  release-checklist.md
backend/infra/: deployment.md
backend/scripts/: release_verify_demo.py  seed_coupons.py  seed_data.py
backend/secure_travel_booking_platform.egg-info/: SOURCES.txt
backend/security/: pentest-checklist.md  threat-model.md  vulnerability-report.md
backend/tests/: conftest_postgres.py  test_admin_access.py  test_admin_bulk_operations.py  test_admin_coupon.py  test_admin_exports.py  test_admin_payments.py  test_admin_refund.py  test_admin_refunds_filters.py  test_auth.py  test_booking_cancellation.py  test_booking_tour.py  test_booking_voucher.py  test_booking_voucher_document.py  test_booking_voucher_pdf.py  test_config_validation.py  test_coupon_applicability.py  test_document_download_not_found.py  test_hotels_tours_filters.py  test_logging_formatters.py  test_malware_scan_service.py  test_migration_regressions.py  test_outbox_processing.py  test_outbox_repository.py  test_payment.py  test_payment_callback.py  test_payment_callback_amount_mismatch.py  test_payment_callback_replay.py  test_payment_hardening.py  test_rate_limit.py  test_refresh_token.py  test_refresh_token_rotation.py  test_release_preflight.py  test_request_context.py  test_runtime_tasks.py  test_secret_manager.py  test_security_events.py  test_service_registry.py  test_startup_guards.py  test_startup_logging.py  test_storage_service.py  (+7 more)
(+1049 files in other folders)
