[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-travel-booking-platform"
version = "0.1.0"
description = "Security-focused travel booking platform built with FastAPI"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "alembic",
  "alembic-postgresql-enum",
  "psycopg2-binary",
  "PyJWT>=2.10.0",
  "passlib[bcrypt]",
  "pydantic-settings",
  "email-validator",
  "python-multipart",
  "httpx",
  "reportlab",
  "redis",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "bandit",
  "pip-audit",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "postgres: tests that require a real PostgreSQL database"
]

